--- a/index.html
+++ b/index.html
@@ -1,12 +1,308 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.mjs" type="module"></script>
+    <title>Weather app</title>
+  </head>
+  <body class="blurred">
+    <header class="header">
+      <div class="left-header">
+        <img src="icons/sun.svg" class="large weather-icon" data-current-icon />
+        <div class="header-curent-temp">
+          <span data-current-temp>31</span>&deg;
+        </div>
+      </div>
+      <div class="right-herader">
+        <div class="info-group">
+          <div class="label">High</div>
+          <div><span data-current-high>31</span>&deg;</div>
+        </div>
+        <div class="info-group">
+          <div class="label">Fl High</div>
+          <div><span data-current-fl-high>25</span>&deg;</div>
+        </div>
+        <div class="info-group">
+          <div class="label">wind</div>
+          <div>
+            <span data-current-wind>7 </span><span class="value-sub-info">KM/h</span>
+          </div>
+        </div>
+        <div class="info-group">
+          <div class="label">Low</div>
+          <div><span data-current-low>16</span>&deg;</div>
+        </div>
+        <div class="info-group">
+          <div class="label">Fl low</div>
+          <div><span data-current-fl-low>11</span>&deg;</div>
+        </div>
+        <div class="info-group">
+          <div class="label">Precip</div>
+          <div>
+            <span data-current-precip>0.2 </span
+            ><span class="value-sub-info">mm</span>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="day-section" data-day-section>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="icons/smog.svg" class="weather-icon" />
+        <div class="day-card-date">Moneday</div>
+        <div>32&deg;</div>
+      </div>
+    </section>
+    <table class="hour-section">
+      <tbody data-hour-section>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Moneday</div>
+              <div>3 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">temp</div>
+              <div>20&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">fl temp</div>
+              <div>18&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">wind</div>
+              <div>2 <span class="value-sub-info">KM/h</span></div>
+            </div>
+          </td>
+          <td>
+              <div class="info-group">
+              <div class="label">percip</div>
+              <div>2 <span class="value-sub-info">mm</span></div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
