--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <div class="header-curent-temp">
           <span data-current-temp>31</span>&deg;
         </div>
+        <div >CITY:
+          <span data-city>
+----
+          </span>
+        </div>
       </div>
       <div class="right-herader">
         <div class="info-group">
